clusters/loudnova/platform/monitoring/netdata/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netdata
  labels:
    loudnova.cloudnova.tech/public-routes: "true"
