clusters/loudnova/platform/monitoring/netdata/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netdata
  namespace: netdata
spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway-infra
      sectionName: http

  hostnames:
    - netdata.cloudnova.tech

  rules:
    - backendRefs:
        - name: netdata
          port: 19999
